--- a/package.json
+++ b/package.json
@@ -6,5 +6,13 @@
   "repository": "git@github.com:yesplayer/yesplayer.git",
   "author": "nemanjan00 <nemanjan00@gmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "awesome-typescript-loader": "^3.2.3",
+    "source-map-loader": "^0.2.2",
+    "typescript": "^2.5.3"
+  },
+  "devDependencies": {
+    "electron": "^1.7.9"
+  }
 }
