--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
   "author": "nemanjan00 <nemanjan00@gmail.com>",
   "license": "MIT",
   "private": false,
-  "dependencies": {
-    "awesome-typescript-loader": "^3.2.3",
-    "source-map-loader": "^0.2.2",
-    "typescript": "^2.5.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "electron": "^1.7.9"
   }
