--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
 	"compilerOptions": {
-		"outDir": "./dist/",
+		"outDir": "./build/dist/",
 		"sourceMap": true,
 		"noImplicitAny": true,
 		"module": "commonjs",
-		"target": "es5",
-		"jsx": "react"
+		"target": "es5"
 	},
 	"include": [
 		"./src/**/*"
 	]
 }
+
