--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "fourier-transform": "^1.1.2",
     "p5": "^0.5.16"
   },
   "devDependencies": {
