--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "p5": "^0.5.16"
+    "bootstrap": "4.0.0-beta.2",
+    "jquery": "^3.2.1",
+    "node-sass": "^4.6.1",
+    "p5": "^0.5.16",
+    "popper.js": "^1.12.7",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1"
   },
   "devDependencies": {
+    "css-loader": "^0.28.7",
     "electron": "^1.7.9"
   }
 }
